borsh-derive/src/snapshots/borsh_schema_derive_internal__enum_schema__tests__with_funcs_attr.snap
---
source: borsh-schema-derive-internal/src/enum_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::BorshSchema for C<K, V>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K > ::declaration(), < V > ::declaration()
        ];
        format!(r#"{}<{}>"#, "C", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct CC3(u64, u64);
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        struct CC4<K, V>(
            u64,
            #[borsh(
                schema(
                    with_funcs(
                        declaration = "third_party_impl::declaration::<K, V>",
                        definitions = "third_party_impl::add_definitions_recursively::<K, V>"
                    )
                )
            )]
            ThirdParty<K, V>,
        );
        <CC3 as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <CC4<K, V> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        let variants = borsh::__private::maybestd::vec![
            ("C3".to_string(), < CC3 > ::declaration()), ("C4".to_string(), < CC4 < K, V
            > > ::declaration())
        ];
        let definition = borsh::schema::Definition::Enum {
            variants,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
    }
}

